Added the main page with places for names

--- a/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_main.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,59 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFEB3B"
     tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/introLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Monke."
+        android:layout_marginTop="32dp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/otbtd_logo" />
+
+    <EditText
+        android:id="@+id/playerOneTextbox"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:text="@string/playerOneTextbox"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/introLogo"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintStart_toStartOf="@+id/introLogo"
+        app:layout_constraintTop_toBottomOf="@+id/introLogo"
+        app:layout_constraintVertical_bias="0.16000003" />
+
+    <EditText
+        android:id="@+id/playerTwoTextbox"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:text="@string/playerTwoTextbox"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="@+id/playerOneTextbox"
+        app:layout_constraintStart_toStartOf="@+id/playerOneTextbox"
+        app:layout_constraintTop_toBottomOf="@+id/playerOneTextbox" />
+
+    <ImageButton
+        android:id="@+id/startButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/playerTwoTextbox"
+        app:srcCompat="@drawable/startbloon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
