Added a how to play and selection activity page (and a special suprise for the main activity)

--- a/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_game.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_game.xml
@@ -101,7 +101,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/resetMove"
+        android:id="@+id/selectMode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reset_move"
