--- a/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_game.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_game.xml
@@ -101,10 +101,13 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/resetMove"
+        android:id="@+id/selectMode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reset_move"
+        android:layout_marginStart="8dp"
+        android:backgroundTint="#C59078"
+        android:onClick="selectionModeActivity"
+        android:text="@string/selectModeBtn"
         app:layout_constraintBottom_toBottomOf="@+id/gameView"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -112,6 +115,8 @@
         android:id="@+id/makeMoveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:backgroundTint="#CD2020"
         android:text="@string/make_move"
         app:layout_constraintBottom_toBottomOf="@+id/gameView"
         app:layout_constraintEnd_toEndOf="parent" />
