--- a/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_main.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_main.xml
@@ -60,14 +60,37 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageButton
-        android:id="@+id/startButton"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:background="#00FFFFFF"
-        android:contentDescription="@string/startButton"
-        android:onClick="onGameStart"
-        android:src="@drawable/startbloon" />
+        android:layout_weight="1">
+
+        <Button
+            android:id="@+id/howToPlayActivityBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#D51616"
+            android:fontFamily="@font/luckiest_guy"
+            android:onClick="howToActivity"
+            android:text="@string/howToPlayActivityBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/startButton" />
+
+        <ImageButton
+            android:id="@+id/startButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#00FFFFFF"
+            android:contentDescription="@string/startButton"
+            android:onClick="onGameStart"
+            android:src="@drawable/startbloon"
+            app:layout_constraintBottom_toTopOf="@+id/howToPlayActivityBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
