--- a/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_selection.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_selection.xml
@@ -14,8 +14,9 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:background="@android:color/transparent"
-        android:src="@drawable/yellowbloon"
-        android:contentDescription="@string/tackBtn" />
+        android:contentDescription="@string/tackBtn"
+        android:onClick="setCircle"
+        android:src="@drawable/yellowbloon" />
 
     <TextView
         android:id="@+id/textView"
@@ -33,8 +34,9 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:background="@android:color/transparent"
-        android:src="@drawable/bluebloon"
-        android:contentDescription="@string/bombBtn" />
+        android:contentDescription="@string/bombBtn"
+        android:onClick="setRectangle"
+        android:src="@drawable/bluebloon" />
 
     <TextView
         android:id="@+id/textView2"
@@ -52,8 +54,9 @@
         android:layout_height="0dp"
         android:layout_weight="2"
         android:background="@android:color/transparent"
-        android:src="@drawable/redbloon"
-        android:contentDescription="@string/dartBtn" />
+        android:contentDescription="@string/dartBtn"
+        android:onClick="setLine"
+        android:src="@drawable/redbloon" />
 
     <TextView
         android:id="@+id/textView3"
