Added padding to landscape main activity

--- a/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
@@ -25,6 +25,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/introLogo"
