--- a/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
@@ -43,7 +43,8 @@
             app:layout_constraintBottom_toTopOf="@+id/playerTwoTextbox"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:autofillHints="Player One" />
 
         <EditText
             android:id="@+id/playerTwoTextbox"
@@ -56,7 +57,8 @@
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playerOneTextbox" />
+            app:layout_constraintTop_toBottomOf="@+id/playerOneTextbox"
+            android:autofillHints="Player Two" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
