--- a/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_main.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:autofillHints="Player One" />
 
         <EditText
             android:id="@+id/playerTwoTextbox"
@@ -56,7 +57,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playerOneTextbox" />
+            app:layout_constraintTop_toBottomOf="@+id/playerOneTextbox"
+            android:autofillHints="Player Two" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
