--- a/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_game.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_game.xml
@@ -10,79 +10,23 @@
         android:id="@+id/gameView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:background="@drawable/monkeymeadow"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        android:background="@drawable/monkeymeadow_land"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_width="150dp"
+        android:layout_height="0dp"
         android:background="@drawable/wood_texture"
         android:backgroundTint="#2CFFFFFF"
         android:backgroundTintMode="src_atop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:id="@+id/roundLabel3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/roundLabel"
-            android:textColor="#3E2723"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/roundCounter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/roundCounterInitialValue"
-            android:textColor="#3E2723"
-            app:layout_constraintEnd_toEndOf="@+id/roundLabel3"
-            app:layout_constraintStart_toStartOf="@+id/roundLabel3"
-            app:layout_constraintTop_toBottomOf="@+id/roundLabel3" />
-
-        <TextView
-            android:id="@+id/player2Label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/player2Label"
-            android:textColor="#4E342E"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/player2Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/player2Name"
-            android:textColor="#4E342E"
-            android:textSize="28sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/player2Label" />
-
-        <TextView
-            android:id="@+id/player1Label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/player1Label"
-            android:textColor="#4E342E"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/player1Name"
@@ -92,30 +36,92 @@
             android:text="@string/player1Name"
             android:textColor="#4E342E"
             android:textSize="28sp"
-            app:layout_constraintStart_toStartOf="@+id/player1Label"
-            app:layout_constraintTop_toBottomOf="@+id/player1Label" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/player1Label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/player1Label"
+            android:textColor="#4E342E"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/player1Name" />
 
         <TextView
             android:id="@+id/player1Score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:text="@string/player1Score"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/player1Label"
-            app:layout_constraintStart_toEndOf="@+id/player1Label" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/player1Label"
+            app:layout_constraintTop_toTopOf="@+id/player1Label" />
+
+        <TextView
+            android:id="@+id/player2Name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="@string/player2Name"
+            android:textColor="#4E342E"
+            android:textSize="28sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/player2Label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/player2Label"
+            android:textColor="#4E342E"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/player2Name"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/player2Score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
             android:text="@string/player2Score"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/player2Label"
-            app:layout_constraintEnd_toStartOf="@+id/player2Label" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/player2Label" />
+
+        <TextView
+            android:id="@+id/roundLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/roundLabel"
+            android:textColor="#3E2723"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/roundCounter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/roundCounter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/roundCounterInitialValue"
+            android:textColor="#3E2723"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -124,15 +130,22 @@
         android:id="@+id/selectMode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reset_move"
-        app:layout_constraintBottom_toBottomOf="@+id/gameView"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="#C59078"
+        android:onClick="selectionModeActivity"
+        android:text="@string/selectModeBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/makeMoveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:backgroundTint="#CD2020"
         android:text="@string/make_move"
-        app:layout_constraintBottom_toBottomOf="@+id/gameView"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/constraintLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
