Fixed some small bugs and a bunch of lint warnings

--- a/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
@@ -37,6 +37,7 @@
             android:layout_height="wrap_content"
             android:autofillHints="Player One"
             android:ems="10"
+            android:hint="@string/player_one_s_name2"
             android:inputType="textPersonName"
             android:minHeight="48dp"
             android:text="@string/playerOneTextbox"
@@ -52,6 +53,7 @@
             android:layout_height="wrap_content"
             android:autofillHints="Player Two"
             android:ems="10"
+            android:hint="@string/player_two_s_name2"
             android:inputType="textPersonName"
             android:minHeight="48dp"
             android:text="@string/playerTwoTextbox"
@@ -73,12 +75,14 @@
                 android:text="@string/rounds"
                 app:layout_constraintBottom_toTopOf="@+id/numberSpinner"
                 app:layout_constraintEnd_toEndOf="@+id/numberSpinner"
-                app:layout_constraintStart_toStartOf="@+id/numberSpinner" />
+                app:layout_constraintStart_toStartOf="@+id/numberSpinner"
+                tools:ignore="TextContrastCheck" />
 
             <Spinner
                 android:id="@+id/numberSpinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/RoundPickerSpeakableText"
                 android:minHeight="48dp"
                 app:layout_constraintBottom_toBottomOf="@+id/startButton"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -94,10 +98,12 @@
                 android:fontFamily="@font/luckiest_guy"
                 android:onClick="howToActivity"
                 android:text="@string/howToPlayActivityBtn"
+                android:textColor="#FFF176"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/startButton" />
+                app:layout_constraintTop_toBottomOf="@+id/startButton"
+                tools:ignore="TextContrastCheck" />
 
             <ImageButton
                 android:id="@+id/startButton"
