--- a/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/layout-land/activity_main.xml
@@ -31,42 +31,12 @@
         app:layout_constraintStart_toEndOf="@+id/introLogo"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/playerOneTextbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autofillHints="Player One"
-            android:ems="10"
-            android:hint="@string/player_one_s_name2"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:text="@string/playerOneTextbox"
-            android:textAlignment="center"
-            app:layout_constraintBottom_toTopOf="@+id/playerTwoTextbox"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/playerTwoTextbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autofillHints="Player Two"
-            android:ems="10"
-            android:hint="@string/player_two_s_name2"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            android:text="@string/playerTwoTextbox"
-            android:textAlignment="center"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playerOneTextbox" />
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="189dp"
             android:layout_weight="1"
-            app:layout_constraintTop_toBottomOf="@+id/playerTwoTextbox">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/textView5"
@@ -84,41 +54,23 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/RoundPickerSpeakableText"
                 android:minHeight="48dp"
-                app:layout_constraintBottom_toBottomOf="@+id/startButton"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/startButton"
-                app:layout_constraintTop_toTopOf="@+id/startButton" />
-
-            <Button
-                android:id="@+id/howToPlayActivityBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="#D51616"
-                android:fontFamily="@font/luckiest_guy"
-                android:onClick="howToActivity"
-                android:text="@string/howToPlayActivityBtn"
-                android:textColor="#FFF176"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/startButton"
-                tools:ignore="TextContrastCheck" />
+                app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-            <ImageButton
-                android:id="@+id/startButton"
+            <TextView
+                android:id="@+id/waitText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="#00FFFFFF"
-                android:contentDescription="@string/startButton"
-                android:onClick="onGameStart"
-                android:src="@drawable/startbloon"
-                app:layout_constraintBottom_toTopOf="@+id/howToPlayActivityBtn"
-                app:layout_constraintEnd_toStartOf="@+id/textView5"
+                android:text="@string/wait_p1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
